--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "pg": "^8.16.2",
+    "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
