--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@tanstack/vue-query": "^5.83.1",
+    "@vueup/vue-quill": "^1.2.0",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.11.0",
     "font-awesome": "^4.7.0",
@@ -31,6 +31,7 @@
     "eslint-plugin-vue": "~10.3.0",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
+    "less": "^4.4.0",
     "postcss": "^8.5.6",
     "prettier": "3.6.2",
     "tailwindcss": "^3.4.3",
