--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -17,6 +19,7 @@
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.2",
     "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
@@ -28,6 +31,11 @@
     "eslint-config-prettier": "^9.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "supertest": "^7.0.0"
+  },
+  "scripts": {
+    "start": "nodemon --inspect server.js",
+    "test": "node --test ./test/*.test.js"
   }
 }
